<resources>
    <!-- Action Bar -->
    <string name="app_name">London Non-League</string>
    <string name="title_activity_location">"Location "</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">London Non-League</string>
    <string name="nav_header_subtitle">1514850@brunel.ac.uk</string>
    <string name="nav_drawer_location">Location</string>
    <string name="nav_drawer_standings">Standings</string>
    <string name="nav_drawer_maps">Maps</string>
    <string name="nav_drawer_about">About</string>
    <string name="nav_drawer_email">Email</string>
    <string name="nav_drawer_hita">Help improve the App</string>
    <string name="action_settings">Settings</string>

    <!-- About -->
    <string name="about_title">London Non-League  \n </string>
    <string name="about_devs">Name of Developer:</string>
    <string name="about_name_daniel">Daniel Gubala\n</string>
    <string name="about_name_description">Purpose:</string>
    <string name="about_name_descriptioninfo"> The London Non-League application is an app that assist all Londoners who would be curious in following
        non-league football. It will hopefully encourage them to attend to the nearest match and spread the word. \n</string>
    <string name="about_name_version">Version Number:</string>
    <string name="about_name_versionnumber">1.0</string>

    <!-- Email -->
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Email</string>

</resources>
